log
Mon 06 May 2024 06:59:09 PM UTC: 
 tests:  1|8
total_score: 0/70
9715a69
Mon 06 May 2024 07:01:46 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:5: error: unknown type name ‘Treemap’; did you mean ‘TreeMap’?
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |     ^~~~~~~
      |     TreeMap
treemap.c:41:22: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |                      ^~~~~~~
      |                      TreeMap
treemap.c:41:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:31: error: expected expression before ‘)’ token
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |                               ^
treemap.c:42:9: error: request for member ‘root’ in something not a structure or union
   42 |     tree->root = NULL;
      |         ^~
treemap.c:43:9: error: request for member ‘current’ in something not a structure or union
   43 |     tree->current = NULL;
      |         ^~
treemap.c:44:9: error: request for member ‘lower_than’ in something not a structure or union
   44 |     tree->lower_than = lower_than;
      |         ^~
treemap.c:45:12: error: returning ‘int *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   45 |     return tree;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
c2afa20
Mon 06 May 2024 07:03:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3379dc9
Mon 06 May 2024 07:10:42 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
428f94e
Mon 06 May 2024 07:11:34 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
95aca97
Mon 06 May 2024 07:12:24 PM UTC: 
 treemap.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  4|7
total_score: 5/70
697a53c
Mon 06 May 2024 07:18:35 PM UTC: 
 treemap.c | 48 +++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 45 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:105:1: error: control reaches end of non-void function [-Werror=return-type]
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1be322a
Mon 06 May 2024 07:22:39 PM UTC: 
 treemap.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  5|6
total_score: 5/70
73bed55
Mon 06 May 2024 07:27:19 PM UTC: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++--
 1 file changed, 32 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:132:64: error: expected statement before ‘)’ token
  132 |         if (is_equal(tree, tree->current->pair->key, key) == 1))
      |                                                                ^
treemap.c:136:9: error: ‘else’ without a previous ‘if’
  136 |         else
      |         ^~~~
Compilation failed
45e9d8d
Mon 06 May 2024 07:27:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|6
total_score: 5/70
01356ba
Mon 06 May 2024 07:29:08 PM UTC: 
 treemap.c | 19 +++++--------------
 1 file changed, 5 insertions(+), 14 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:128:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  128 |     TreeNode *aux = tree->root;
      |               ^~~
treemap.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b8a79c7
